--- a/src/view/less/index.less
+++ b/src/view/less/index.less
@@ -8,6 +8,13 @@
 	}
 }
 
+// #flow{
+//     min-height:@h;
+//     min-width:600px;
+// }
+
+
 .inactive{
-  visibility: hidden;
+  display:none;
+  // visibility: hidden;
 }
